# sdk-python

./: .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/copilot/: setup.sh
.github/workflows/: check.yml  copilot-setup-steps.yml  publish.yml  push.yml
adk/: Makefile  README.md  pyproject.toml
adk/agenticlayer/: __init__.py  a2a_starlette.py  agent.py  agent_to_a2a.py  callback_tracer_plugin.py  config.py  constants.py  loguru_config.py  mcp_session_patch.py  metrics_plugin.py  otel.py  otel_starlette.py  token_context.py
adk/agenticlayer/adk/: __init__.py  agent.py  agent_to_a2a.py  otel.py
adk/tests/: conftest.py  test_a2a_starlette.py  test_agent_integration.py  test_config.py  test_external_token.py  test_fixtures.py  test_mcp_tool_descriptions.py  test_token_context.py
adk/tests/fixtures/: __init__.py  app_factory.py  mock_llm.py
adk/tests/utils/: helpers.py
msaf/: Makefile  README.md  pyproject.toml
msaf/agenticlayer/msaf/: __init__.py  agent.py  agent_to_a2a.py  client.py  metrics_middleware.py  otel.py
msaf/agenticlayer_msaf/: __init__.py  agent.py  agent_to_a2a.py  client.py  otel.py
msaf/tests/: conftest.py  test_agent_to_a2a.py  test_msaf_integration.py
msaf/tests/fixtures/: app_factory.py  mock_client.py
msaf/tests/utils/: helpers.py
shared/: Makefile  README.md  pyproject.toml
shared/agenticlayer/: _otel.py  otel_starlette.py
shared/agenticlayer/shared/: config.py  constants.py  otel.py  otel_starlette.py
shared/agenticlayer_shared/: __init__.py  constants.py  loguru_config.py  otel.py
