[project]
name = "agentic-layer-sdk"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentic-layer-sdk-adk",
]

[dependency-groups]
dev = [
    "mypy[reports]>=1.12.0,<2",
    "ruff>=0.11.2",
    "bandit[toml]>=1.7.8",
    "pip-audit>=2.5,<3",
    "pytest>=8.3.3,<9",
    "pytest-cov>=7,<8",
    "types-protobuf>=6.30.2.20250822",
]


[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "adk",
]

[tool.uv.sources]
agentic-layer-sdk-adk = { workspace = true }


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pytest.ini_options]
minversion = "7.0"
testpaths = "test"
pythonpath = ["."]
addopts = """\
--strict-config \
--cov agenticlayer \
--cov-report html \
--import-mode=importlib \
--show-capture=no \
"""


[tool.ruff]
# Allow lines to be as long as 120.
line-length = 120

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
# I001 --> enable import sorting rules
# Q --> enable flake8-quotes rules for consistent quote style
# N --> pep8-naming for proper naming conventions
# PT --> flake8-pytest-style for pytest best practices
# TID251 --> banned relative imports
# DTZ --> datetime timezone awareness
extend-select = ["Q", "N", "I001", "PT", "TID251", "DTZ"]


[tool.bandit]
exclude_dirs = [".venv"]

[tool.bandit.assert_used]
skips = ["*_test.py", "*test_*.py"]


[tool.mypy]
strict = true
