[project]
name = "agentic-layer-sdk-adk"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentic-layer-sdk-shared",
    "google-adk[a2a]",
    "litellm",
    "openinference-instrumentation-google-adk",
    "httpx-retries>=0.4.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agenticlayer"]

[tool.uv.sources]
agentic-layer-sdk-shared = { workspace = true }
