[project]
name = "agentic-layer-sdk-adk"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "agentic-layer-sdk",
    "google-adk[a2a]>=1.26.0",
    "litellm>=1.83.0",
    "httpx-retries>=0.4.5",
    "opentelemetry-exporter-otlp-proto-http>=1.38.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.38.0",
    "opentelemetry-instrumentation-starlette>=0.59b0",
    "opentelemetry-instrumentation-httpx>=0.59b0",
    "opentelemetry-instrumentation-logging>=0.59b0",
    "openinference-instrumentation-google-adk>=0.1.10",
]

[dependency-groups]
dev = [
    "mypy[reports]>=1.12.0,<2",
    "ruff>=0.11.2",
    "pytest>=9.0.1,<10",
    "pytest-cov>=7,<8",
    "types-protobuf>=6.30.2.20250822",
    "pytest-asyncio>=1.3.0",
    "asgi-lifespan>=2.1.0",
    "respx>=0.22.0",
    "fastmcp>=3.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agenticlayer"]

[tool.uv.sources]
agentic-layer-sdk = { path = "../shared" }


[tool.pytest.ini_options]
minversion = "7.0"
testpaths = "tests"
pythonpath = [".", "../shared"]
addopts = """\
--strict-config \
--cov agenticlayer/adk \
--cov-report html \
--import-mode=importlib \
--show-capture=no \
"""
filterwarnings = [
    # https://github.com/boto/boto3/issues/3889
    "ignore::UserWarning:google.adk.*",
    "ignore::DeprecationWarning:google.*",
    "ignore::DeprecationWarning:litellm.*",
    "ignore::DeprecationWarning:a2a.*",
    "ignore::UserWarning:agenticlayer.*",
    # google-adk uses the deprecated streamablehttp_client from mcp; suppress until upstream fixes it
    "ignore:Use `streamable_http_client` instead.:DeprecationWarning",
]


[tool.ruff]
# Allow lines to be as long as 120.
line-length = 120

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
# I001 --> enable import sorting rules
# Q --> enable flake8-quotes rules for consistent quote style
# N --> pep8-naming for proper naming conventions
# PT --> flake8-pytest-style for pytest best practices
# TID251 --> banned relative imports
# DTZ --> datetime timezone awareness
extend-select = ["Q", "N", "I001", "PT", "TID251", "DTZ"]

[tool.mypy]
strict = true
explicit_package_bases = true
mypy_path = ["."]
namespace_packages = true
