[project]
name = "agentic-layer-sdk-msaf"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentic-layer-sdk-shared",
    "agent-framework-core>=1.0.0rc2",
    "a2a-sdk",
    "starlette",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agenticlayer_msaf"]
