[project]
name = "agentic-layer-sdk-shared"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "pydantic>=2",
    "opentelemetry-exporter-otlp-proto-http",
    "opentelemetry-exporter-otlp-proto-grpc",
    "opentelemetry-instrumentation-starlette",
    "opentelemetry-instrumentation-httpx",
    "starlette",
    "a2a-sdk",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agenticlayer_shared"]
